# txt2db

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  Readme.md  build.rs
src/: aggregation.rs  config.rs  database.rs  database_duckdb.rs  database_sqlite.rs  db_trait.rs  io_splicer.rs  lib.rs  main.rs  output.rs  parser.rs  stats.rs
tests/: integration_tests.rs
