[package]
name = "txt2db"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
regex = "1"
walkdir = "2"
anyhow = "1.0"
dashmap = "5"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.13"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"

