[package]
name = "txt2db"
version = "0.1.0"
edition = "2024"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[profile.release]
#debug = true  # Keeps symbols, but still optimizes fully

[dependencies]
crossbeam-channel = "0.5"
regex = "1"
walkdir = "2"
anyhow = "1.0"
dashmap = "5"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.13"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
pcre2 = "0.2"
tabled = "0.15"
csv = "1.3"
tabwriter = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
flate2 = "1.0"